[gd_scene load_steps=30 format=3 uid="uid://bloel1m3idv1"]

[ext_resource type="PackedScene" uid="uid://r5scpyy2bnhg" path="res://scenes/levels/level.tscn" id="1_nm2rp"]
[ext_resource type="Script" path="res://scenes/levels/outside.gd" id="2_hnyg5"]
[ext_resource type="Texture2D" uid="uid://dpu6get5ux6w8" path="res://graphics/ground/stones.png" id="2_taulm"]
[ext_resource type="PackedScene" uid="uid://dvqrkol0gpurs" path="res://scenes/levels/inside.tscn" id="3_suexq"]
[ext_resource type="PackedScene" uid="uid://jj0l2cicvhtc" path="res://scenes/houses/house.tscn" id="3_xq182"]
[ext_resource type="Texture2D" uid="uid://c7cvrdg3xkvxf" path="res://graphics/tilesets/outside_walls.png" id="4_84h6m"]
[ext_resource type="Texture2D" uid="uid://dghxdklfh1flt" path="res://graphics/tilesets/soil.png" id="5_aqwbf"]
[ext_resource type="Texture2D" uid="uid://d4kshu6uabgj0" path="res://graphics/decals/dirt_patch.png" id="6_yowjy"]
[ext_resource type="Texture2D" uid="uid://0wgvv60ofggi" path="res://graphics/decals/moss/moss_1.png" id="7_m1xlh"]
[ext_resource type="Texture2D" uid="uid://cp46atu5p41ty" path="res://graphics/decals/moss/moss_2.png" id="8_1l5q5"]
[ext_resource type="Texture2D" uid="uid://b4yt5rel04t70" path="res://graphics/decals/moss/moss_3.png" id="9_0ld47"]
[ext_resource type="Texture2D" uid="uid://c7njvv5pvlw4p" path="res://graphics/decals/moss/moss_4.png" id="10_v50i0"]
[ext_resource type="Texture2D" uid="uid://djqpf28d0d4w5" path="res://graphics/decals/moss/moss_5.png" id="11_4y45a"]
[ext_resource type="PackedScene" uid="uid://ccr4d0ijmi7w" path="res://scenes/objects/steam_vent.tscn" id="12_ubw3k"]
[ext_resource type="PackedScene" uid="uid://dd5qa4awp4w6p" path="res://scenes/objects/light_fan_animation.tscn" id="13_m18ms"]
[ext_resource type="PackedScene" uid="uid://opnxbwexcshu" path="res://scenes/objects/gate.tscn" id="14_hd2fc"]
[ext_resource type="PackedScene" uid="uid://ctqikggtsoc72" path="res://scenes/objects/ItemContainers/crate.tscn" id="18_f3r8t"]
[ext_resource type="PackedScene" uid="uid://dvoa07speihhx" path="res://scenes/enemies/scout.tscn" id="18_g0mq4"]
[ext_resource type="PackedScene" uid="uid://dqn28lmqwtljg" path="res://scenes/enemies/bug.tscn" id="19_ocrqk"]
[ext_resource type="PackedScene" uid="uid://73py8r8xbdd8" path="res://scenes/enemies/drone.tscn" id="20_4m32p"]
[ext_resource type="PackedScene" uid="uid://dv1jm3u501os6" path="res://scenes/enemies/car.tscn" id="21_ndbom"]
[ext_resource type="PackedScene" uid="uid://cq43vrc8jbuo7" path="res://scenes/enemies/hunter.tscn" id="21_p4g46"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_klqfc"]
resource_name = "Walls"
texture = ExtResource("4_84h6m")
texture_region_size = Vector2i(390, 390)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, 63, 195, 61, 195, -59, -62, -59)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(195, -61, 195, 61, -195, 61, -195, -59)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(64, 63, -195, 61, -195, -59, 62, -59)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(63, -64, 61, 195, -59, 195, -59, -62)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(52, -61, 195, -61, 195, 59, 62.0505, 58.9541, 61, 195, -58, 195, -64, -61)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(61, 52, 61, 195, -59, 195, -58.9541, 62.0505, -195, 61, -195, -58, 61, -64)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-61, -195, 61, -195, 61, 195, -59, 195)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-61, -52, -61, -195, 59, -195, 58.9541, -62.0505, 195, -61, 195, 58, -61, 64)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-52, 61, -195, 61, -195, -59, -62.0505, -58.9541, -61, -195, 58, -195, 64, 61)
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(63, 64, 61, -195, -59, -195, -59, 62)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ewp1t"]
resource_name = "Soil"
texture = ExtResource("5_aqwbf")
texture_region_size = Vector2i(390, 390)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_enfiw"]
tile_size = Vector2i(390, 390)
physics_layer_0/collision_layer = 4
physics_layer_0/collision_mask = 11
sources/0 = SubResource("TileSetAtlasSource_klqfc")
sources/1 = SubResource("TileSetAtlasSource_ewp1t")

[sub_resource type="Curve2D" id="Curve2D_qr87s"]
_data = {
"points": PackedVector2Array(-453.06, 7.55099, 453.06, -7.55099, 2462, 1650, -309.591, -264.285, 309.591, 264.285, 3767, 2148, 173.673, -490.815, -173.673, 490.815, 4259, 4207, 694.692, -7.55099, -694.692, 7.55099, 2665, 5105, 181.224, 558.774, -181.224, -558.774, 1170, 4260, -166.122, 400.203, 166.122, -400.203, 1352, 2518, -528.57, 37.755, 528.57, -37.755, 2462, 1650)
}
point_count = 7

[sub_resource type="RectangleShape2D" id="RectangleShape2D_umwtk"]
size = Vector2(1932.5, 115)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ps3ex"]
size = Vector2(280, 1856)

[sub_resource type="NavigationPolygon" id="NavigationPolygon_l7eas"]
vertices = PackedVector2Array(4391, 116, 4400, 2092, 3951, 2047, 3085, 1593, 3017, 1427, 2999, 1279, -534, 193, 467, 193, 467, 296, -916, 1050, -898, 502, 2636, 1284, 2613, 489, 4315, -86, 2461, -95, 2452, 26, 2263, 206, 2052, 493, 1832, 202, 1801, 381, 2056, 646, 2429, 668, 2461, 1450, 1836, 1791, 741, 2334, -979, 1414, 1329, 282, 1352, 399, 1176, 2429, -1339, 1297, -2196, -267, -2205, -906, -623, -903, -2064, -264, -1579, 1465, -2055, 1363, -605, 8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3, 4, 5), PackedInt32Array(6, 7, 8, 9, 10), PackedInt32Array(0, 5, 11, 12, 13), PackedInt32Array(14, 13, 12, 15), PackedInt32Array(16, 15, 12, 17), PackedInt32Array(18, 16, 17, 19), PackedInt32Array(9, 20, 21, 22, 23, 24, 25), PackedInt32Array(8, 26, 27, 9), PackedInt32Array(19, 17, 20, 9, 27), PackedInt32Array(23, 28, 24), PackedInt32Array(9, 25, 29, 10), PackedInt32Array(30, 31, 32, 33), PackedInt32Array(34, 35, 33, 32, 36, 10), PackedInt32Array(36, 6, 10), PackedInt32Array(29, 34, 10)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-979, 1414, -916, 1050, -898, 502, -534, 193, 467, 193, 467, 296, 1329, 282, 1352, 399, 1801, 381, 1832, 202, 2263, 206, 2452, 26, 2461, -95, 4315, -86, 4391, 116, 4400, 2092, 3951, 2047, 3085, 1593, 3017, 1427, 2999, 1279, 2636, 1284, 2613, 489, 2052, 493, 2056, 646, 2429, 668, 2461, 1450, 1836, 1791, 1176, 2429, 741, 2334), PackedVector2Array(-2055, 1363, -2064, -264, -2196, -267, -2205, -906, -623, -903, -605, 8, -534, 193, -898, 502, -916, 1050, -979, 1414, -1339, 1297, -1579, 1465)])

[node name="outside" instance=ExtResource("1_nm2rp")]
script = ExtResource("2_hnyg5")
inside_level_scene = ExtResource("3_suexq")

[node name="Soil" type="Sprite2D" parent="Ground" index="0"]
texture_repeat = 2
position = Vector2(578, 495)
scale = Vector2(1.6367, 1.12932)
texture = ExtResource("2_taulm")
region_enabled = true
region_rect = Rect2(-3391.33, -2507.36, 8700.07, 10000)

[node name="House" parent="Ground" index="1" instance=ExtResource("3_xq182")]
position = Vector2(-1648, 2360)
rotation = -2.6708

[node name="TileMap" type="TileMap" parent="Ground" index="2"]
position = Vector2(0, 5)
tile_set = SubResource("TileSet_enfiw")
format = 2
layer_0/name = "Soil"
layer_0/tile_data = PackedInt32Array(131078, 131073, 2, 65542, 131073, 0, 65541, 1, 0, 131077, 1, 2)
layer_1/name = "Walls"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(-6, 0, 1, 65530, 0, 2, 131066, 0, 2, 196602, 0, 2, 262138, 0, 3, 196614, 65536, 2, 131078, 0, 2, 65542, 131072, 1, 65541, 0, 0, 196615, 131072, 0, 131069, 0, 1, 196605, 0, 3, -196602, 131072, 1, -131066, 0, 2, -65530, 65536, 2, -65529, 65536, 0, -65528, 65536, 0, -65527, 65536, 0, -5, 1, 0, 65531, 1, 2, -4, 65537, 0, -3, 65537, 0, 65532, 65537, 2, 65533, 65537, 2, 65534, 131073, 2, 1048565, 65536, 0, 1048566, 65536, 0, 1048567, 65536, 0, 1048568, 65536, 0, 1048569, 65536, 0, 1048570, 65536, 0, 1048571, 65536, 0, 1048572, 65536, 0, 1048573, 65536, 0, 1048574, 65536, 0, 1048575, 65536, 0, 983040, 65536, 0, 983041, 65536, 0, 983042, 65536, 0, 983043, 65536, 0, 983044, 65536, 0, 983045, 65536, 0, 983046, 65536, 0, 983047, 65536, 0, 983048, 65536, 0, 983049, 65536, 0, 983050, 65536, 0, 983051, 65536, 0, 983052, 65536, 0, 983053, 65536, 0, 983054, 131072, 2, 917518, 0, 2, 851982, 0, 2, 786446, 0, 2, 720910, 0, 2, 655374, 0, 2, 589838, 0, 2, 524302, 0, 2, 458766, 0, 2, 393230, 0, 2, 327694, 0, 2, 262158, 0, 2, 196622, 0, 2, 131086, 0, 2, 65550, 0, 2, 14, 0, 2, -65522, 131072, 1, -65526, 65536, 0, -65525, 65536, 0, -65524, 65536, 0, -65523, 65536, 0, -131074, 65536, 0, -131075, 65536, 0, -131076, 65536, 0, -131077, 65536, 0, -131078, 65536, 0, -131079, 65536, 0, -131080, 65536, 0, -131081, 65536, 0, -131082, 65536, 0, -131083, 65536, 0, -131084, 65536, 0, -131085, 65536, 1, -13, 0, 2, 65523, 0, 2, 131059, 0, 2, 196595, 0, 2, 262131, 0, 2, 327667, 0, 2, 393203, 0, 2, 458739, 0, 2, 524275, 0, 2, 589811, 0, 2, 655347, 0, 2, 720883, 0, 2, 786419, 0, 2, 851955, 0, 2, 917491, 0, 2, 983027, 0, 2, -65549, 0, 2, 1048563, 65536, 2, 1048564, 65536, 0, 589829, 65536, 0, 589830, 65536, 0, 589831, 65536, 0, 589832, 65536, 0, 589828, 0, 0, 589833, 131072, 0, 65547, 0, 2, 131083, 0, 2, 196619, 0, 2, 262155, 0, 2, 327691, 0, 2, 11, 0, 1, 393227, 0, 3, 917493, 65536, 2, 720885, 65536, 1, 720890, 131072, 1, 786426, 0, 2, 851962, 0, 2, 917498, 0, 2, 983034, 0, 3, 851957, 0, 2, 786421, 0, 2, 720888, 65536, 0, 720887, 65536, 0, 720886, 65536, 0, 720889, 65536, 0, 917494, 65536, 0, 917495, 65536, 0, 917496, 131072, 0, 262133, 65536, 1, 262135, 131072, 2, 65527, 131072, 1, 589813, 65536, 2, 524277, 0, 2, 458741, 0, 2, 393205, 0, 2, 327669, 0, 2, 196599, 0, 2, 131063, 0, 2, 589814, 65536, 0, 589815, 65536, 0, 589816, 65536, 0, 262134, 65536, 0, 65526, 65536, 0, 65525, 65536, 0, 65524, 0, 0, 589817, 131072, 0)

[node name="Decoration" type="Sprite2D" parent="Ground" index="3"]
modulate = Color(0.807843, 0.709804, 0.627451, 1)
position = Vector2(-257, 1008)
texture = ExtResource("6_yowjy")

[node name="Moss1" type="Sprite2D" parent="Ground" index="4"]
position = Vector2(-1490, 881)
texture = ExtResource("7_m1xlh")

[node name="Moss2" type="Sprite2D" parent="Ground" index="5"]
position = Vector2(1597, 1218)
texture = ExtResource("8_1l5q5")

[node name="Moss3" type="Sprite2D" parent="Ground" index="6"]
position = Vector2(-1561, 342)
texture = ExtResource("9_0ld47")

[node name="Moss4" type="Sprite2D" parent="Ground" index="7"]
position = Vector2(2629, 1)
texture = ExtResource("10_v50i0")

[node name="Moss5" type="Sprite2D" parent="Ground" index="8"]
position = Vector2(2209, 1099)
texture = ExtResource("11_4y45a")

[node name="SteamVent" parent="Ground" index="9" instance=ExtResource("12_ubw3k")]
position = Vector2(877, 1361)

[node name="LightFanAnimation" parent="Ground" index="10" instance=ExtResource("13_m18ms")]
position = Vector2(-1038, 2477)

[node name="Gate" parent="Ground" index="11" instance=ExtResource("14_hd2fc")]
position = Vector2(912, -598)

[node name="crate" parent="Ground" index="12" instance=ExtResource("18_f3r8t")]
position = Vector2(1577, 280)

[node name="Scout" parent="Enemies" index="0" instance=ExtResource("18_g0mq4")]
position = Vector2(-1540, 499)

[node name="Bug" parent="Enemies" index="1" instance=ExtResource("19_ocrqk")]
position = Vector2(3009, 364)

[node name="Bug2" parent="Enemies" index="2" instance=ExtResource("19_ocrqk")]
position = Vector2(3267, 900)

[node name="Bug3" parent="Enemies" index="3" instance=ExtResource("19_ocrqk")]
position = Vector2(3567, 367)

[node name="Drone" parent="Enemies" index="4" instance=ExtResource("20_4m32p")]
position = Vector2(-839, 2500)

[node name="Hunter" parent="Enemies" index="5" instance=ExtResource("21_p4g46")]
position = Vector2(455, 1769)

[node name="player" parent="." index="6"]
position = Vector2(920, 381)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="CarPath" type="Path2D" parent="." index="9"]
position = Vector2(45, 211)
curve = SubResource("Curve2D_qr87s")

[node name="Car" parent="CarPath" index="0" instance=ExtResource("21_ndbom")]
position = Vector2(2462, 1650)
rotation = -0.0166652

[node name="LevelBarriers" type="Node2D" parent="." index="10"]

[node name="StaticBody2D" type="StaticBody2D" parent="LevelBarriers" index="0"]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelBarriers/StaticBody2D" index="0"]
position = Vector2(977.5, 3708.5)
shape = SubResource("RectangleShape2D_umwtk")

[node name="StaticBody2D3" type="StaticBody2D" parent="LevelBarriers" index="1"]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelBarriers/StaticBody2D3" index="0"]
position = Vector2(-249, 5093)
shape = SubResource("RectangleShape2D_ps3ex")

[node name="StaticBody2D2" type="StaticBody2D" parent="LevelBarriers" index="2"]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelBarriers/StaticBody2D2" index="0"]
position = Vector2(4659.75, 3709)
shape = SubResource("RectangleShape2D_umwtk")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="." index="11"]
navigation_polygon = SubResource("NavigationPolygon_l7eas")
metadata/_edit_lock_ = true

[connection signal="player_entered" from="Ground/House" to="." method="_on_house_player_entered"]
[connection signal="player_left" from="Ground/House" to="." method="_on_house_player_left"]
[connection signal="player_entered_gate" from="Ground/Gate" to="." method="_on_gate_player_entered_gate"]
